k8s/argocd/argocd-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: stackgres
---
apiVersion: v1
kind: Namespace
metadata:
  name: interpolator
