k8s/argocd/argocd-postgres.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: interpolator
