k8s/argocd/argocd-interpolator-host.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: interpolator
---
apiVersion: v1
kind: Deployment
metadata:
  name: interpolator-host
  namespace: interpolator
spec:
  replicas: 1
  selector:
    matchLabels:
      app: interpolator-host
  template:
    metadata:
      labels:
        app: interpolator-host
    spec:
      containers:
        - name: interpolator-host
          image: hanneszbinden/baechlisbrunneschreck-interpolator:0.0.1
          ports:
            - containerPort: 80
          resources:
            requests:
              memory: "256Mi"
              cpu: "250m"
            limits:
              memory: "512Mi"
              cpu: "500m"
