k8s/argocd/argocd-host.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: interpolator-host
  namespace: interpolator
spec:
  replicas: 1
  selector:
    matchLabels:
      app: interpolator-host
  template:
    metadata:
      labels:
        app: interpolator-host
    spec:
      containers:
        - name: interpolator-host
          image: hanneszbinden/baechlisbrunneschreck-interpolator:0.0.1
          ports:
            - containerPort: 80
          resources:
            requests:
              memory: "256Mi"
              cpu: "250m"
            limits:
              memory: "512Mi"
              cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  name: interpolator-host
  namespace: interpolator
spec:
  selector:
    app: interpolator-host
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: NodePort
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: interpolator-host
  namespace: interpolator
spec:
  rules:
    - host: interpolator.zbinde.ch
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: interpolator-host
                port:
                  number: 80
